# rWordNet 1.0.0
* Performance fixes for the lookup
* Find using Lemma.find / Lemma.find_all
* using ruby style constant names like `VerbPointers` -> `VERB_POINTERS`
* renamed WordNet::WordNetDB to WordNet::DB
* renaming a few methods in Lemma like `p_cnt` -> `pointer_count`
* make Pointer a real class

# rWordNet 0.1.3
* Fixed a terrible bug that caused Indices to re-read the *entire* database on every failed lookup.

# rWordNet 0.1.2
* Added unique (integer) ids to lemmas [Wolfram Sieber]

# rWordNet 0.1.1
* Maintenance release, fixing some broken unit tests.
* Updated the interface for using Indices; where before you could instantiate an Index by calling, e.g., NounIndex.new, now you instantiate them as singleton instances (`NounIndex.instance`).

# rWordNet 0.1.0
* Initial release